# vulkan_learn

./: Cargo.toml  README.md
shaders/unlit/: unlit.frag.glsl  unlit.vert.glsl
src/: fps_counter.rs  main.rs  no_engine.rs
src/no_engine/: allocator.rs  asset.rs  command.rs  debug_utils.rs  device.rs  id.rs  objects.rs  pipeline.rs  register.rs  rendering_info.rs  shader.rs  surface.rs  swapchain.rs  utils.rs
src/no_engine/allocator/: buffer.rs  image.rs  mesh.rs  object.rs
src/no_engine/asset/: loader.rs
src/no_engine/objects/: mesh.rs
src/no_engine/pipeline/: builder.rs  configuration.rs  object.rs  vertex_states.rs
src/no_engine/pipeline/configuration/: anti_alising.rs
src/no_engine/shader/: layouts.rs
